--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,14 @@
 header{
+    position: fixed;
     display: flex;
     width: 100%;
     height: 124px;
     justify-content: space-between;
     align-items: center;
     padding: 0 70px;
+    background-color: azure;
+}
+
+header img{
+    height: 50%;
 }
