--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,13 +2,20 @@ header{
     position: fixed;
     display: flex;
     width: 100%;
-    height: 124px;
+    height: 10vh;
     justify-content: space-between;
     align-items: center;
-    padding: 0 70px;
-    background-color: azure;
+    padding: 0 20px;
+    background-color: white;
 }
 
 header img{
     height: 50%;
+}
+
+
+@media (min-width: 768px) {
+    header{
+        padding: 0 70px;
+    }
 }
