--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,4 +1,5 @@
 .hero-section{
+    margin-top: 10vh;
     display: grid;
     padding: 0 70px;
     grid-template-rows:1fr 1fr;
@@ -7,12 +8,12 @@
     color: var(--secondary-color-light-gray);
 }
 
-/* .hero-section__image-container{
+.hero-section__image-container{
     position: relative;
-} */
+}
 
 .hero-section__image-container img{
-    position: relative;
+    position: absolute;
     top: 60px;
     width: 360px;
     height: 360px;
