--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,23 +17,114 @@ nav ul li > a{
     font-weight: bold;
 } */
 
-.burger, .menu{
+.menu{
     position: fixed;
 }
 
 .burger{
     z-index: 4;
-    top: 0;
-    left: 0;
+    
     display:grid;
     place-items: center;
     width: 50px;
     height: 50px;
+    right: 20px;
     background-image: url('../../assets/icons/icon _hamburger_menu.svg');
     background-repeat: no-repeat;
     background-position: center;
+    background-color: white;
 }
 
-.burger .open{
+.burger.open {
     background-image: url('../../assets/icons/X.svg');
+}
+
+.background {
+    position: fixed;
+    z-index: 2;
+    top: 44px;
+    left: 44px;
+    aspect-ratio: 1/1;
+    translate: -50% -50%;
+    height: 88px;
+    background: #07030a;
+    border-radius: 50%;
+    opacity: 0;
+    transition: 0.6s;
+}
+
+.background.open{
+    height: 500vh;
+    opacity: 0.85;
+}
+
+.menu{
+    z-index: 3;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.05s;
+}
+
+.menu nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 100px;
+}
+
+.menu.open{
+    opacity: 1;
+    visibility: visible;
+}
+
+.menu a{
+    color: #f9f9f9;
+    font-size: 32px;
+    padding: 20px 0 20px 20px;
+    text-decoration: none;
+    text-transform: capitalize;
+    opacity: 0;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.menu nav:hover > a {
+    opacity: 0.25;
+}
+
+.menu nav > a:hover{
+    opacity: 1;
+}
+
+.menu.open a{
+    opacity: 1;
+}
+
+@keyframes appear{
+    0% {
+        opacity: 0;
+        translate: 0 30px;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.appear{
+    animation: appear 0.35s backwards;
+}
+
+.page{
+    transition: 0.6s;
+}
+
+.page.open{
+    filter: blur(10px);
 }
