--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,12 @@ button{
   font-weight: 300;
 }
 
+.section-title{
+  font-size: 4.8rem;
+  font-weight: bold;
+  font-family: var(--titles-typography);
+}
+
 .cosmetic-title{
   font-size: 6.4rem;
   font-family: var(--titles-typography);
