--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,6 +6,7 @@ header{
     justify-content: space-between;
     align-items: center;
     background-color: white;
+    z-index: 10;
 }
 
 header img{
