--- a/src/components/pages/Chicago/Chicago.css
+++ b/src/components/pages/Chicago/Chicago.css
@@ -1,32 +1,34 @@
-.AboutUs-section__container{
+.chicago-section__container{
     display: grid;
     grid-template-rows: 1fr 1fr;
     place-items: center;
     width: 100%;
     padding: 0 40px;
+    row-gap: 40px;
 }
 
-.AboutUs-section__info{
+.chicago-section__info{
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-.AboutUs-section__info p{
+.chicago-section__info p{
     line-height: 25px;
 }
 
-.AboutUs-section__titles h1{
+.chicago-section__titles h1{
     color: var(--primary-color-green);
 }
 
-.AboutUs-section__image{
+.chicago-section__image{
     position: relative;
-    width: 372px;
+    width: 80%;
+    max-width: 372px;
     height: 470px;
 }
 
-.AboutUs-section__image img{
+.chicago-section__image img{
     position: absolute;
     width: 248px;
     height: 324px;
@@ -34,12 +36,12 @@
     object-fit: hidden;
 }
 
-.AboutUs-section__image img:nth-child(1){
+.chicago-section__image img:nth-child(1){
     bottom: 0;
     left: 0;
     background-color: var(--primary-color-green);
 }
-.AboutUs-section__image img:nth-child(2){
+.chicago-section__image img:nth-child(2){
     top: 0;
     right: 0;
     background-color: var(--primary-color-yellow);
@@ -47,7 +49,7 @@
 
 
 @media (min-width: 768px) {
-    .AboutUs-section__container{
+    .chicago-section__container{
         grid-template-rows: none;
         grid-template-columns: 1fr 1fr;
         gap: 60px;
