--- a/src/components/navs/Navbar/Navbar.css
+++ b/src/components/navs/Navbar/Navbar.css
@@ -11,14 +11,14 @@
     width: 50px;
     height: 50px;
     right: 20px;
-    background-image: url('../../assets/icons/icon _hamburger_menu.svg');
+    background-image: url('../../../assets/icons/icon _hamburger_menu.svg');
     background-repeat: no-repeat;
     background-position: center;
     
 }
 
 .burger.open {
-    background-image: url('../../assets/icons/X.svg');
+    background-image: url('../../../assets/icons/X.svg');
 }
 
 .background {
