--- a/src/components/navs/NavMenu/NavMenu.css
+++ b/src/components/navs/NavMenu/NavMenu.css
@@ -7,7 +7,8 @@ nav ul{
     width: 100%;
     display: flex;
     list-style: none;
-    justify-content: space-between;
+    justify-content: flex-end;
+    gap: 60px;
 }
 
 nav ul li > a{
