--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ html{
 }
 
 body{
-  width: 100vw;
+
   font-family: var(--regular-typography);
 }
 
@@ -88,6 +88,7 @@ footer{
 button{
   background: transparent;
   border: none;
+  cursor: pointer;
 }
 
 li{
