--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,4 +14,11 @@ header img{
     height: 50%;
 }
 
+.header-button{
+    display:grid;
+    place-items: center;
+    width: 50px;
+    height: 50px;
+}
+
 
