--- a/src/components/navs/Navbar/Navbar.css
+++ b/src/components/navs/Navbar/Navbar.css
@@ -4,12 +4,10 @@
 
 
 
+
+
 .burger{
     z-index: 4;
-    display:grid;
-    place-items: center;
-    width: 50px;
-    height: 50px;
     right: 20px;
     background-image: url('../../../assets/icons/icon _hamburger_menu.svg');
     background-repeat: no-repeat;
@@ -37,6 +35,7 @@
 .background.open{
     height: 500vh;
     opacity: 0.85;
+    z-index: 3;
 }
 
 .menu{
@@ -44,7 +43,8 @@
     top: 0;
     left: 0;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-end;
     height: 100%;
     width: 100%;
     opacity: 0;
@@ -55,9 +55,9 @@
 .menu nav{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding-left: 100px;
+    align-items: flex-end;
+    padding-right: 100px;
+    padding-top: 10vh;
 }
 
 .menu.open{
