--- a/src/components/BookingPage/BookingPage.css
+++ b/src/components/BookingPage/BookingPage.css
@@ -1,3 +1,9 @@
 .booking__form-container form input{
     display: block;
 }
+
+@media (min-width: 768px) {
+    .booking-page{
+        place-items: center;
+    }
+}
