--- a/src/components/BookingPage/sections/BookingConfirmation/BookingConfirmation.css
+++ b/src/components/BookingPage/sections/BookingConfirmation/BookingConfirmation.css
@@ -1,21 +1,42 @@
 .booking-confirmation{
+    min-height: 80vh;
     display: grid;
-    padding: 60px 0;
+    padding: 20px 0;
+}
+
+.booking-confirmation h2{
+    margin-bottom: 5px;
 }
 
 .booking__confirmacion-table{
     display: grid;
     grid-template-columns: 50% 50%;
+    row-gap: 16px;
+    margin-bottom: 16px;
 }
 .booking-confirmation > p{
     font-size: 2.0rem;
     font-weight: 600;
 }
 
-.booking-confirmation > *:not(.booking__name-confirmation):not(button) {
+.booking-confirmation hr{
+    margin: 0 20px;
+}
+
+.booking__name-confirmation, .booking__email-confirmation {
+    display: flex;
+    align-items: center;
+    height: 48px;
+}
+
+
+.booking-confirmation > *:not(button) {
     padding: 0 20px;
   }
 
+  .booking-confirmation .booking__confirmacion-table{
+    padding-top: 44px;
+  }
 .booking__confirmacion-table p{
     font-size: 1.8rem;
     font-weight: 600;
@@ -38,15 +59,21 @@
 }
 
 .description-text{
-    
+    color: var(--primary-color-green);
+}
+
+.confirmation__button{
+    width: 80%;
+    justify-self: center;
+}
+
+.booking-confirmation .description-text{
+    margin: 38px 0;
 }
 
 @media (min-width: 768px) {
-    .booking-page{
-        place-items: center;
-    }
     .booking-confirmation{
-        margin: 120px 0;
+        margin: 20px 0;
         width: 50%;
     }
 
